feat: add .visually-hidden class

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
     </header>
     <main>
       <section class="section">
-        <h1 class="main-heading section-heading sr-only" hidden>Portfolio</h1>
+        <h1 class="main-heading section-heading visually-hidden" hidden>Portfolio</h1>
         <ul class="list filter-list">
           <li class="list-item filter-list-item">
             <button class="btn filter-list-btn" type="button">All</button>
