--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <button class="btn" type="button">Order Service</button>
       </section>
       <section class="section strengths-section">
-        <h2 class="heading section-heading sr-only" hidden>Our strenghts</h2>
+        <h2 class="heading section-heading visually-hidden">Our strenghts</h2>
         <ul class="list">
           <li class="list-item">
             <h3 class="heading item-heading">Strategy</h3>
