feat: add modern.normalize.min.css file

--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
@@ -47,7 +54,9 @@
     </header>
     <main>
       <section class="section">
-        <h1 class="main-heading section-heading visually-hidden" hidden>Portfolio</h1>
+        <h1 class="main-heading section-heading visually-hidden" hidden>
+          Portfolio
+        </h1>
         <ul class="list filter-list">
           <li class="list-item filter-list-item">
             <button class="btn filter-list-btn" type="button">All</button>
