feat: add styling to header and footer: flex, margins, paddings

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
-        <nav>
+      <div class="container header-wrapper">
+        <nav class="navigation-links">
           <a class="link navigation-link logo" href="./index.html"
             >Web<span class="studio-element">Studio</span></a
           >
-          <ul class="list">
+          <ul class="list navigation-menu">
             <li>
               <a class="link navigation-link" href="./index.html">Studio</a>
             </li>
@@ -39,7 +39,7 @@
           </ul>
         </nav>
         <address class="address">
-          <ul class="list">
+          <ul class="list contact-links">
             <li>
               <a class="link contact-link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
@@ -176,7 +176,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-wrapper">
         <a class="link logo" href="./index.html"
           >Web<span class="studio-element">Studio</span>
         </a>
