--- a/index.html
+++ b/index.html
@@ -64,29 +64,29 @@
       <section class="section strengths-section">
         <div class="container">
           <h2 class="heading section-heading visually-hidden">Our strenghts</h2>
-          <ul class="list">
-            <li class="list-item">
+          <ul class="list strengths-list">
+            <li class="list-item strengths-list-item">
               <h3 class="heading item-heading">Strategy</h3>
               <p class="item-description">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li class="list-item">
+            <li class="list-item strengths-list-item">
               <h3 class="heading item-heading">Punctuality</h3>
               <p class="item-description">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li class="list-item">
+            <li class="list-item strengths-list-item">
               <h3 class="heading item-heading">Diligence</h3>
               <p class="item-description">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li class="list-item">
+            <li class="list-item strengths-list-item">
               <h3 class="heading item-heading">Technologies</h3>
               <p class="item-description">
                 Design practice focused on digital experiences. We bring forth a
@@ -96,28 +96,31 @@
           </ul>
         </div>
       </section>
-      <section class="section portfolio-section" id="portfolio">
+      <section class="section work-section">
         <div class="container">
           <h2 class="heading section-heading">What are we doing</h2>
-          <ul class="list">
-            <li class="list-item">
+          <ul class="list work-list">
+            <li class="list-item work-list-item">
               <img
+                class="item-image"
                 src="./images/main/screen-with-several-charts.jpg"
                 alt="Screen with several charts"
                 width="360"
                 height="300"
               />
             </li>
-            <li class="list-item">
+            <li class="list-item work-list-item">
               <img
+                class="item-image"
                 src="./images/main/phone-app-with-several-screen-variations.jpg"
                 alt="Phone app with several screen variations"
                 width="360"
                 height="300"
               />
             </li>
-            <li class="list-item">
+            <li class="list-item work-list-item">
               <img
+                class="item-image"
                 src="./images/main/phone-with-open-website-held-by-hand.jpg"
                 alt="Phone with open website held by hand"
                 width="360"
@@ -133,43 +136,55 @@
           <ul class="list team-list">
             <li class="list-item team-list-item">
               <img
+                class="item-image"
                 src="./images/main/smiling-beard-man-in-light-blue-shirt.jpg"
                 alt="Smiling beard man in light blue shirt"
                 width="264"
                 height="260"
               />
-              <h3 class="heading item-heading">Mark Guerrero</h3>
-              <p class="item-role">Product designer</p>
+              <div class="item-content">
+                <h3 class="heading item-heading">Mark Guerrero</h3>
+                <p class="item-role">Product designer</p>
+              </div>
             </li>
             <li class="list-item team-list-item">
               <img
+                class="item-image"
                 src="./images/main/smiling-man-in-light-blue-shirt.jpg"
                 alt="Smiling man in light blue shirt"
                 width="264"
                 height="260"
               />
-              <h3 class="heading item-heading">Tom Ford</h3>
-              <p class="item-role">Frontend developer</p>
+              <div class="item-content">
+                <h3 class="heading item-heading">Tom Ford</h3>
+                <p class="item-role">Frontend developer</p>
+              </div>
             </li>
             <li class="list-item team-list-item">
               <img
+                class="item-image"
                 src="./images/main/smiling-woman-in-pink-sweater.jpg"
                 alt="Smiling woman in pink sweater"
                 width="264"
                 height="260"
               />
-              <h3 class="heading item-heading">Camila Garcia</h3>
-              <p class="item-role">Marketing</p>
+              <div class="item-content">
+                <h3 class="heading item-heading">Camila Garcia</h3>
+                <p class="item-role">Marketing</p>
+              </div>
             </li>
             <li class="list-item team-list-item">
               <img
+                class="item-image"
                 src="./images/main/smiling-man-in-gray-tshirt.jpg"
                 alt="Smiling man in gray t-shirt"
                 width="264"
                 height="260"
               />
-              <h3 class="heading item-heading">Daniel Wilson</h3>
-              <p class="item-role">UI designer</p>
+              <div class="item-content">
+                <h3 class="heading item-heading">Daniel Wilson</h3>
+                <p class="item-role">UI designer</p>
+              </div>
             </li>
           </ul>
         </div>
