--- a/portfolio.html
+++ b/portfolio.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
@@ -14,10 +17,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header class="header">
@@ -55,28 +55,34 @@
       </div>
     </header>
     <main>
-      <section class="section">
+      <section class="section portfolio-section">
         <div class="container">
           <h1 class="main-heading section-heading visually-hidden" hidden>
             Portfolio
           </h1>
-          <ul class="list filter-list">
-            <li class="list-item filter-list-item">
-              <button class="btn filter-list-btn" type="button">All</button>
+          <ul class="list portfolio-filter-list">
+            <li class="list-item portfolio-filter-list-item">
+              <button class="btn portfolio-filter-list-btn" type="button">
+                All
+              </button>
             </li>
-            <li class="list-item filter-list-item">
-              <button class="btn filter-list-btn" type="button">
+            <li class="list-item portfolio-filter-list-item">
+              <button class="btn portfolio-filter-list-btn" type="button">
                 Web Site
               </button>
             </li>
-            <li class="list-item filter-list-item">
-              <button class="btn filter-list-btn" type="button">App</button>
+            <li class="list-item portfolio-filter-list-item">
+              <button class="btn portfolio-filter-list-btn" type="button">
+                App
+              </button>
             </li>
-            <li class="list-item filter-list-item">
-              <button class="btn filter-list-btn" type="button">Design</button>
+            <li class="list-item portfolio-filter-list-item">
+              <button class="btn portfolio-filter-list-btn" type="button">
+                Design
+              </button>
             </li>
-            <li class="list-item filter-list-item">
-              <button class="btn filter-list-btn" type="button">
+            <li class="list-item portfolio-filter-list-item">
+              <button class="btn portfolio-filter-list-btn" type="button">
                 Marketing
               </button>
             </li>
@@ -85,111 +91,140 @@
             <li class="list-item portfolio-list-item">
               <a class="link porfolio-link" href="">
                 <img
+                  class="item-image"
                   src="./images/portfolio/banking-aplication-concept_with-several-screen-examples.jpg"
                   alt="Banking application concept with several screen examples"
                   width="360"
                   height="300"
                 />
-                <h2 class="heading item-heading">
-                  Banking App Interface Concept
-                </h2>
-                <p class="item-role">App</p>
+                <div class="item-content">
+                  <h2 class="heading item-heading">
+                    Banking App Interface Concept
+                  </h2>
+                  <p class="item-role">App</p>
+                </div>
               </a>
             </li>
             <li class="list-item portfolio-list-item">
               <a class="link porfolio-link" href=""
                 ><img
+                  class="item-image"
                   src="./images/portfolio/phone-next-to-terminal-for-cashless-payment.jpg"
                   alt="Phone next to terminal for cashless payment"
                   width="360"
                   height="300"
                 />
-                <h2 class="heading item-heading">Cashless Payment</h2>
-                <p class="item-role">Marketing</p>
+                <div class="item-content">
+                  <h2 class="heading item-heading">Cashless Payment</h2>
+                  <p class="item-role">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="list-item portfolio-list-item">
               <a class="link porfolio-link" href=""
                 ><img
+                  class="item-image"
                   src="./images/portfolio/phone-and-laptop-with-meditation-app.jpg"
                   alt="Phone and laptop with meditation app"
                   width="360"
                   height="300"
                 />
-                <h2 class="heading item-heading">Meditation App</h2>
-                <p class="item-role">App</p>
+                <div class="item-content">
+                  <h2 class="heading item-heading">Meditation App</h2>
+                  <p class="item-role">App</p>
+                </div>
               </a>
             </li>
             <li class="list-item portfolio-list-item">
               <a class="link porfolio-link" href="">
                 <img
+                  class="item-image"
                   src="./images/portfolio/car-interior-with-navigation-enabled-phone.jpg"
                   alt="Car interior with navigation enabled phone"
                   width="360"
                   height="300"
                 />
-                <h2 class="heading item-heading">Taxi Service</h2>
-                <p class="item-role">Marketing</p>
+                <div class="item-content">
+                  <h2 class="heading item-heading">Taxi Service</h2>
+                  <p class="item-role">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="list-item portfolio-list-item">
               <a class="link porfolio-link" href="">
                 <img
+                  class="item-image"
                   src="./images/portfolio/several-wariants-of-phone-screens-depicting-moon-and-space.jpg"
                   alt="Several variants of phone screens depicting moon and space"
                   width="360"
                   height="300"
                 />
-                <h2 class="heading item-heading">Screen Illustrations</h2>
-                <p class="item-role">Design</p>
+                <div class="item-content">
+                  <h2 class="heading item-heading">Screen Illustrations</h2>
+                  <p class="item-role">Design</p>
+                </div>
               </a>
             </li>
             <li class="list-item portfolio-list-item">
               <a class="link porfolio-link" href="">
                 <img
+                  class="item-image"
                   src="./images/portfolio/smiling-woman-with-glasses-and-earphones-in-orange-sweater-holding-phone.jpg"
                   alt="Smiling woman with glasses and earphones in orange sweater holding phone"
                   width="360"
                   height="300"
                 />
-                <h2 class="heading item-heading">Online Courses</h2>
-                <p class="item-role">Marketing</p>
+                <div class="item-content">
+                  <h2 class="heading item-heading">Online Courses</h2>
+                  <p class="item-role">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="list-item portfolio-list-item">
               <a class="link porfolio-link" href="">
                 <img
+                  class="item-image"
                   src="./images/portfolio/few-examples-of-page-structure-presenting-instagram-stories-concept.jpg"
                   alt="Few examples of page structure presenting instagram stories concept"
                   width="360"
                   height="300"
                 />
-                <h2 class="heading item-heading">Instagram Stories Concept</h2>
-                <p class="item-role">Design</p>
+                <div class="item-content">
+                  <h2 class="heading item-heading">
+                    Instagram Stories Concept
+                  </h2>
+                  <p class="item-role">Design</p>
+                </div>
               </a>
             </li>
             <li class="list-item portfolio-list-item">
               <a class="link porfolio-link" href="">
                 <img
+                  class="item-image"
                   src="./images/portfolio/person-with-bag-of-fruits-and-vegetables.jpg"
                   alt="Person with bag of fruits and vegetables"
                   width="360"
                   height="300"
                 />
-                <h2 class="heading item-heading">Organic Food</h2>
-                <p class="item-role">Web Site</p>
+                <div class="item-content">
+                  <h2 class="heading item-heading">Organic Food</h2>
+                  <p class="item-role">Web Site</p>
+                </div>
               </a>
             </li>
             <li class="list-item portfolio-list-item">
               <a class="link porfolio-link" href="">
                 <img
+                  class="item-image"
                   src="./images/portfolio/coffee-with-nice-milk-pattern.jpg"
                   alt="Coffee with nice milk pattern"
                   width="360"
                   height="300"
                 />
-                <h2 class="heading item-heading">Fresh Coffee</h2>
-                <p class="item-role">Web Site</p>
+                <div class="item-content">
+                  <h2 class="heading item-heading">Fresh Coffee</h2>
+                  <p class="item-role">Web Site</p>
+                </div>
               </a>
             </li>
           </ul>
