refactor: change styling: paddings, margins

--- a/index.html
+++ b/index.html
@@ -56,10 +56,12 @@
     </header>
     <main>
       <section class="section main-page-main-section">
-        <h1 class="main-heading section-heading">
-          Effective Solutions for Your Business
-        </h1>
-        <button class="btn" type="button">Order Service</button>
+        <div class="container">
+          <h1 class="main-heading section-heading">
+            Effective Solutions for Your Business
+          </h1>
+          <button class="btn" type="button">Order Service</button>
+        </div>
       </section>
       <section class="section strengths-section">
         <div class="container">
